[project]
name = "github-trending-scraper"
version = "0.1.0"
description = "A simple scraper for GitHub trending repositories."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "pandas>=2.0.1",
    "lxml>=4.9.2",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # bugbear
]
ignore = [
    "E203",  # whitespace before ':', compatible with black
    "E501",  # line length handled by formatter
]

